--- a/pages/css/styleburger.css
+++ b/pages/css/styleburger.css
@@ -128,7 +128,7 @@ table {
     line-height: 25px;
     border-top: 5px solid limegreen;
     border-right: 5px solid limegreen;
-    color: gray;
+    color: red;
     font-size: 1.2rem;
   }
   h3{
