--- a/pages/css/styleburger.css
+++ b/pages/css/styleburger.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&family=Russo+One&family=Sansita+Swashed:wght@800&display=swap');
 *{
     box-sizing: border-box;
     margin: 0
@@ -14,6 +15,7 @@ ul{
     font-weight: bold;
 }
 li{
+  font-family: 'Russo One', sans-serif;
     color: darkgoldenrod;
 }
 .menu{
@@ -25,6 +27,7 @@ li{
     margin-top:65px;
 }
 h1{
+  font-family: 'Sansita Swashed', cursive;
     text-align: center;
     color: royalblue;
     font-size: 1.5rem;
@@ -125,6 +128,7 @@ table {
 
   }
   p{
+    font-family: 'Roboto', sans-serif;
     line-height: 25px;
     border-top: 5px solid limegreen;
     border-right: 5px solid limegreen;
@@ -132,6 +136,7 @@ table {
     font-size: 1.2rem;
   }
   h3{
+    font-family: 'Sansita Swashed', cursive;
     text-align: center;
     color: royalblue;
     font-size: 1rem;
